ionos_sbx/analytics/superset/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-service
  namespace: analytics
spec:
  selector:
    app: superset-all-in-one
  ports:
  - name: web
    port: 8088
    targetPort: 8088
  type: ClusterIP
